# kata-python

./: .gitignore  README.md  pyproject.toml
tests/: test_module.py
